implement base64 image loading from css

--- a/site/templates/normal.html
+++ b/site/templates/normal.html
@@ -6,6 +6,7 @@
         {{ .Site.CssTag }}
     </head>
     <body>
+        <div class="logo"></div>
         <article>
             <h1>{{ .Page.Meta.Title }}</h1>
             <section class="content">
