--- a/site/styles/_main.scss
+++ b/site/styles/_main.scss
@@ -3,3 +3,10 @@
 h1 {
     color: blue;
 }
+
+.logo {
+    background-image: image('logo.svg');
+    width: 50px;
+    height: 50px;
+    background-size: cover;
+}
