--- a/site/styles/_main.scss
+++ b/site/styles/_main.scss
@@ -1,10 +1,29 @@
-h1 {
-    color: blue;
+@import 'firasans';
+
+img {
+	max-width: 100%;
+}
+a {
+	color: #2ECC40;
+	text-decoration: none;
+}
+h1, h2, strong {
+	color: #111;
+}
+
+body {
+	font-family: 'fira_sansregular', sans-serif;
+	line-height: 1.6;
+	color: #222;
+	max-width: 40rem;
+	padding: 2rem;
+	margin: auto;
+	background: #fafafa;
 }
 
 .logo {
-    background-image: image('logo.svg');
-    width: 50px;
-    height: 50px;
-    background-size: cover;
+	background-image: image('logo.svg');
+	width: 50px;
+	height: 50px;
+	background-size: cover;
 }
