--- a/site/styles/_main.scss
+++ b/site/styles/_main.scss
@@ -1,5 +1,10 @@
 @import 'firasans';
 
+$sidebar_width: 12rem;
+$article_width: 40rem;
+$body_width: 52rem;
+
+
 img {
 	max-width: 100%;
 }
@@ -15,15 +20,83 @@ body {
 	font-family: 'fira_sansregular', sans-serif;
 	line-height: 1.6;
 	color: #222;
-	max-width: 40rem;
-	padding: 2rem;
-	margin: auto;
 	background: #fafafa;
+	margin: auto;
+	max-width: $body_width;
 }
 
-.logo {
-	background-image: image('logo.svg');
-	width: 50px;
-	height: 50px;
-	background-size: cover;
+article {
+	margin-left: $sidebar_width;
+	max-width: $article_width;
+	padding: 2rem;
+}
+
+.sidebar {
+	margin: 0;
+	padding: 0;
+	width: $sidebar_width;
+	background-color: #f1f1f1;
+	position: fixed;
+	height: 100%;
+	overflow: auto;
+
+	.logo {
+		background-image: image('logo.svg');
+		width: 100%;
+		padding-top: 100%;
+		background-size: cover;
+	}
+
+	nav {
+		a {
+			display: block;
+			color: black;
+			padding: 16px;
+			text-decoration: none;
+			background-color: #ddd;
+
+			&.active {
+				background-color: #4CAF50;
+				color: white;
+			}
+
+			&:hover:not(.active) {
+				background-color: #555;
+				color: white;
+			}
+		}
+	}
+}
+
+/* Sidebar links */
+
+// On screens that are less than 700px wide, make the sidebar into a topbar
+@media screen and (max-width: 700px) {
+	.sidebar {
+		width: 100%;
+		height: auto;
+		position: relative;
+
+		nav {
+			a {
+				float: left;
+			}
+		}
+	}
+
+	article {
+		margin-left: 0;
+	}
+}
+
+// On screens that are less than 400px, display the bar vertically, instead of horizontally
+@media screen and (max-width: 400px) {
+	.sidebar {
+		nav {
+			a {
+				text-align: center;
+				float: none;
+			}
+		}
+	}
 }
