--- a/site/templates/normal.html
+++ b/site/templates/normal.html
@@ -1,12 +1,19 @@
+<!DOCTYPE html>
 <html>
     <head>
+		<meta charset="utf-8">
         <title>
             {{ .Page.Meta.Title }} - protopit
         </title>
         {{ .Site.CssTag }}
     </head>
     <body>
-        <div class="logo"></div>
+		<aside class="sidebar">
+			<div class="logo"></div>
+			<nav>
+				<a href="/">Home</a>
+			</nav>
+		</aside>
         <article>
             <h1>{{ .Page.Meta.Title }}</h1>
             <section class="content">
