--- a/site/templates/normal.html
+++ b/site/templates/normal.html
@@ -12,6 +12,8 @@
 			<div class="logo"></div>
 			<nav>
 				<a href="/">Home</a>
+				<l url="foo">Foo</a>
+				<l url="bar">Bar</a>
 			</nav>
 		</aside>
         <article>
