fix page name handling

--- a/site/templates/main.html
+++ b/site/templates/main.html
@@ -14,7 +14,7 @@
             <aside class="sidebar">
                 <div class="logo"></div>
                 <nav>
-                    <l url="">Home</l>
+                    <l url="home">Home</l>
                     <l url="foo">Foo</a>
                     <l url="bar">Bar</a>
                 </nav>
