--- a/site/templates/main.html
+++ b/site/templates/main.html
@@ -18,6 +18,10 @@
                     <l url="foo">Foo</a>
                     <l url="bar">Bar</a>
                 </nav>
+                <div class="languages">
+                    <l url="{{ .Page.Name }}:en">EN</l>
+                    <l url="{{ .Page.Name }}:bg">BG</l>
+                </div>
             </aside>
             <article>
                 {{ if ( eq .Page.Meta.Type "home" ) }}
