--- a/site/templates/main.html
+++ b/site/templates/main.html
@@ -14,13 +14,13 @@
             <aside class="sidebar">
                 <div class="logo"></div>
                 <nav>
-                    <l url="home">{{ translate "Home" }}</l>
-                    <l url="foo">Foo</a>
-                    <l url="bar">Bar</a>
+                    <l name="home">{{ translate "Home" }}</l>
+                    <l name="foo">Foo</a>
+                    <l name="bar">Bar</a>
                 </nav>
                 <div class="languages">
-                    <l url="{{ .Page.Name }}:en">EN</l>
-                    <l url="{{ .Page.Name }}:bg">BG</l>
+                    <l name="{{ .Page.Name }}:en">EN</l>
+                    <l name="{{ .Page.Name }}:bg">BG</l>
                 </div>
             </aside>
             <article>
