--- a/site/templates/main.html
+++ b/site/templates/main.html
@@ -5,7 +5,7 @@
         <title>
             {{ .Page.Meta.Title }} - protopit
         </title>
-        <link rel="icon" type="image/png" href="{{ mcall_url .Site "GetImageData" "logo.svg" "32x32.png" }}" />
+        <link rel="icon" type="image/png" href="{{ mcall_url .Site "GetImageData" "icon.svg" "32x32.png" }}" />
         {{ .Site.CssTag }}
     </head>
     <body>
