add feeds on pages

--- a/site/templates/landing.html
+++ b/site/templates/landing.html
@@ -1,4 +1,14 @@
 <h1>{{ .Page.Meta.Title }}</h1>
-<section class="content">
+<section class="content landing">
+    <div class="logobar">
+        <div class="logo">
+
+        </div>
+    </div>
+
 	{{ .Page.Content }}
+
+    <l name="home:en">English version</l>
+
+    <l name="home:bg">Bulgarian version</l>
 </section>
