prettier landing page

--- a/site/templates/landing.html
+++ b/site/templates/landing.html
@@ -1,14 +1,10 @@
-<h1>{{ .Page.Meta.Title }}</h1>
-<section class="content landing">
+<section class="landing">
     <div class="logobar">
         <div class="logo">
-
         </div>
     </div>
 
-	{{ .Page.Content }}
-
-    <l name="home:en">English version</l>
-
-    <l name="home:bg">Bulgarian version</l>
+    <div class="content">
+        {{ .Page.Content }}
+    </div>
 </section>
