--- a/site/templates/normal.html
+++ b/site/templates/normal.html
@@ -1,4 +1,6 @@
-<h1>{{ .Page.Meta.Title }}</h1>
-<section class="content">
-	{{ .Page.Content }}
-</section>
+<div class="normal">
+	<h1>{{ .Page.Meta.Title }}</h1>
+	<section class="content">
+		{{ .Page.Content }}
+	</section>
+</div>
