--- a/site/styles/_main.scss
+++ b/site/styles/_main.scss
@@ -1,4 +1,5 @@
 @import 'firasans';
+@import 'icons';
 
 $bg: #274b22;
 
@@ -22,10 +23,14 @@ h1, h2, strong {
 }
 
 body {
+	margin: 0px;
 	font-family: 'fira_sansregular', sans-serif;
 	line-height: 1.6;
 	color: #222;
 	background: #fafafa;
+}
+
+body > .normal {
 	margin: auto;
 	max-width: $body_width;
 }
@@ -34,6 +39,37 @@ article {
 	margin-left: $sidebar_width;
 	max-width: $article_width;
 	padding: 2rem;
+}
+
+.landing {
+	.logobar {
+		width: 100%;
+		height: 12em;
+		margin-top: 5vh;
+		margin-bottom: 5vh;
+		padding-top: 1em;
+		padding-bottom: 1em;
+
+		background-color: $bg;
+
+		.logo {
+			height: 100%;
+			width: 100%;
+			background-image: image('logo.svg');
+			background-position: center center;
+			background-size: auto 100%;
+			background-repeat: no-repeat;
+		}
+	}
+
+	text-align: center;
+
+	.icon {
+		width: 2em;
+		height: 2em;
+		margin-left: 2vw;
+		margin-right: 2vw;
+	}
 }
 
 .sidebar {
