--- a/site/styles/_main.scss
+++ b/site/styles/_main.scss
@@ -57,7 +57,7 @@ article {
 			width: 100%;
 			background-image: image('logo.svg');
 			background-position: center center;
-			background-size: auto 100%;
+			background-size: contain;
 			background-repeat: no-repeat;
 		}
 	}
